# lambda_logging

./: .gitignore  .gitmodules  README.md  pyproject.toml
lambda_logging/: app.py
tests/: test_lambda_logging.py
